# pyigt

./: .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  corpus.rst  igt.rst  index.rst  lgr.rst  tutorial.rst
examples/: parser.py
src/pyigt/: __init__.py  __main__.py  cli_util.py  graid.py  igt.py  igt_cldf.py  index.html  lgrmorphemes.py  util.py
src/pyigt/commands/: ls.py  stats.py
src/pyigt/conf/: ilgt.rc
tests/: conftest.py  test_cli.py  test_graid.py  test_igt.py  test_lgr.py  test_lgrmorphemes.py  test_qiang.py  test_util.py
tests/fixtures/: cldf-metadata.json  examples.csv
tests/fixtures/multilingual/: cldf-metadata.json  examples.csv  linking_data.json  linking_examples.csv
tests/fixtures/qiang/: qiang-igt.tsv
tests/fixtures/qiang/output/: form-concordance.tsv  grammatical-concordance.tsv  lexical-concordance.tsv
