[metadata]
name = pyigt
version = 2.1.1.dev0
license = GPL
author = Johann-Mattis List and Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = A Python library for handling inter-linear-glossed text.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Chinese linguistics, historical linguistics, computer-assisted language comparison
url = https://github.com/cldf/pyigt
project_urls =
    Bug Tracker = https://github.com/cldf/pyigt/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    attrs
    csvw
    clldutils
    pycldf
    segments>=2.0.0
    tabulate
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pycldf =
    components/*
    modules/*

[options.entry_points]
console_scripts =
    igt = pyigt.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    twine
    build
test =
    pytest
    pytest-mock
    pytest-cov
    coverage>=4.2
    lingpy>=2.6.5
lingpy =
    lingpy>=2.6.5
docs =
    sphinx<7
    sphinx-autodoc-typehints
    sphinx-rtd-theme

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    pyigt
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py39, py310, py311, py312, py313
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
